kustomize/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demery-net-keys
  labels:
    app: demery-net-keys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demery-net-keys
  template:
    metadata:
      labels:
        app: demery-net-keys
    spec:
      containers:
        - name: demery-net-keys
          image: ghcr.io/danielemery/keys:v1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.02"
              memory: 50Mi
