kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demery-net-keys-svc
spec:
  selector:
    app: demery-net-keys
  ports:
    - port: 80
      name: http
      targetPort: 8000
