kustomize/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demery-net-keys
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.com/health-checks: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "x-content-type-options: Content-Type,Content-Length,Authorization,Accept,X-Requested-With";
      #more_set_headers "X-Content-Type-Options: Content-Type,Content-Length,Authorization,Accept,X-Requested-With";
      more_set_headers "X-Frame-Options: DENY";
      more_set_headers "X-Xss-Protection: 1";
      more_set_headers "access-control-allow-methods: POST,OPTIONS";
      #more_set_headers "access-control-allow-origin: *";
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
      more_set_headers "Access-Control-Allow-Credentials: true";
spec:
  tls:
    - hosts:
        - "keys.demery.net"
      secretName: demery-net-cf-certificate-tls
  rules:
    - host: "keys.demery.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demery-net-keys-svc
                port:
                  number: 80
